# c_palettes

./: .envrc  .gitignore  .gitmodules  Makefile  meson.build
db/: db-mgr.c  db-mgr.h  db.c  db.h  meson.build
embeds/: tbl1.c
etc/: uncrustify.cfg
etc/palettes/kfc/dark/: base16-paraiso  vscode
etc/palettes/paleta/: vscode
list/: debug.h  iterator.h  list.h  main.c  meson.build  palettes.h  rgb2ansi.c  utils.c
menu/: main.c  menu.c  menu.h  meson.build
palette-names/: meson.build  palette-names.c  palette-names.h
palette-utils/: meson.build  palette-utils.c  palette-utils.h
palettes/: meson.build  palettes.c  palettes.h
palettes-test/: meson.build  palettes-test.c  palettes-test.h
parser/: meson.build  parser.c  parser.h
submodules/: meson.build
yaml-dumper/: meson.build  yaml-dumper.c
