subdir('meson_deps/meson/args')
subdir('meson_deps/meson/inc')
subdir('meson_deps/submodules/c_ansi/ansi-codes')
subdir('meson_deps/meson/deps/incbin')
subdir('meson_deps/meson/deps/wildcardcmp')
subdir('meson_deps/meson/deps/cargs')
subdir('meson_deps/meson/deps/libyaml')
subdir('meson_deps/meson/deps/b64')
subdir('meson_deps/meson/deps/parson')
subdir('meson_deps/meson/deps/c_string_buffer')
subdir('meson_deps/meson/deps/c_stringfn')
subdir('meson_deps/meson/deps/debug-memory')
subdir('meson_deps/meson/deps/strdup')
subdir('meson_deps/meson/deps/tempdir')
subdir('meson_deps/meson/deps/c_fsio')
subdir('meson_deps/meson/deps/asprintf')
subdir('meson_deps/meson/deps/generic_print')
subdir('meson_deps/meson/deps/timestamp')
subdir('meson_deps/meson/deps/ms')
subdir('meson_deps/meson/deps/c_timer')
subdir('meson_deps/meson/deps/djbhash')
subdir('meson_deps/meson/deps/dbg')
subdir('meson_deps/meson/deps/rgba')
subdir('meson_deps/meson/deps/fs')
subdir('meson_deps/meson/deps/bytes')
subdir('meson_deps/meson/deps/termpaint')
subdir('meson_deps/submodules/c_ansi/ansi-rgb-utils')
subdir('meson_deps/submodules/c_ansi/ansi-utils')
subdir('meson_deps/submodules/c_ansi/term-utils')
